# trial_prompt_injection

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
gemini(free)/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
gemini(free)/data/: cases.json
gemini(free)/data/custom_inputs/: model_name_test.txt
gemini(free)/data/fs_scenarios/: scenarios.json
gemini(free)/data/fs_scenarios/FS-01/: instruction.txt
gemini(free)/data/fs_scenarios/FS-02/: instruction.txt
gemini(free)/data/fs_scenarios/FS-03/: instruction.txt
gemini(free)/data/fs_scenarios/FS-04/: instruction.txt
gemini(free)/data/fs_scenarios/FS-05/: instruction.txt
gemini(free)/data/fs_scenarios/FS-06/: instruction.txt
gemini(free)/data/sandbox/documents/: B-01_research_report.txt  B-02_instruction_words_benign.txt  PI-01_output_override.txt  PI-02_fake_administrator.txt  PI-03_canary_file_read.txt  PI-04_canary_exfiltration.txt
gemini(free)/prompts/: pdf_as_prompt_instruction.txt  system_baseline.txt  system_hardened.txt  user_task.txt
gemini(free)/src/gemini_injection_lab/: cli.py  client.py  config.py  custom_input.py  evaluator.py  experiment.py  file_runner.py  fs_shadow.py  models.py  prompt_loader.py  recorder.py  sandbox.py  summarizer.py
gemini(free)/tests/: conftest.py  test_cases.py  test_cli.py  test_client.py  test_config.py  test_evaluator.py  test_experiment.py  test_file_run.py  test_fs_shadow.py  test_prompt_loader.py  test_recorder.py  test_sandbox.py  test_summarizer.py  test_tool_catalog.py
gemini(free)/tests/fixtures/interactions/: api_error.json  canary_text_leak.json  function_call_read_file.json  (+4 more)
(+76 files in other folders)
