[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-injection-lab"
version = "0.1.0"
description = "Safe indirect prompt injection experiments for the Gemini Interactions API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-genai>=2.3.0,<3.0.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
gemini-injection-lab = "gemini_injection_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gemini_injection_lab*"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
